--- a/src/app/profile/profile.password-edit.html
+++ b/src/app/profile/profile.password-edit.html
@@ -23,6 +23,8 @@
                     </div>
                 </div>
             </div>
+            
+            <div tpa-robustness-bar></div>
 
             <div class="row text-center actions-bar">
                 <div class="text-center">
