migrate from previous step

--- a/src/app/profile/profile.password-edit.html
+++ b/src/app/profile/profile.password-edit.html
@@ -1,12 +1,12 @@
 <div class="container profile-password-edit">
 
     <div>
-        <a class="link" ui-sref="profile-user-edit">Edit user profile</a>
+        <a class="link" ui-sref="edit-user">Edit user profile</a>
     </div>
 
     <div class="page">
 
-        <h1>Edit password</h1>
+        <h1>Edit {{ passwordVm.firstName }} 's password</h1>
 
         <form name="passwordForm" novalidate ng-submit="save()">
             <div class="row">
@@ -23,7 +23,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <div tpa-robustness-bar></div>
 
             <div class="row text-center actions-bar">
