--- a/src/app/profile/profile.password-edit.html
+++ b/src/app/profile/profile.password-edit.html
@@ -6,7 +6,7 @@
 
     <div class="page">
 
-        <h1>Edit {{ passwordVm.firstName }} 's password</h1>
+        <h1>Edit {{ vm.firstName }} 's password</h1>
 
         <form name="passwordForm" novalidate ng-submit="save()">
             <div class="row">
