--- a/src/app/profile/profile.password-edit.html
+++ b/src/app/profile/profile.password-edit.html
@@ -23,9 +23,8 @@
                     </div>
                 </div>
             </div>
-
             <div class="progress">
-                <div class="progress-bar" ng-class="{ 'progress-bar-danger': vm.getStrongnessPercentage() < 50, 'progress-bar-warning': vm.getStrongnessPercentage() >=50 && vm.getStrongnessPercentage() <80, 'progress-bar-success': vm.getStrongnessPercentage() >= 80 }" role="progressbar" aria-valuenow="{{ vm.getStrongnessPercentage() }}" aria-valuemin="0" aria-valuemax="100" ng-style="{ width: vm.getStrongnessPercentage() + '%' }">
+                <div class="progress-bar" ng-class="vm.getProgressClass()" role="progressbar" aria-valuenow="{{ vm.getStrongnessPercentage() }}" aria-valuemin="0" aria-valuemax="100" ng-style="{ width: vm.getStrongnessPercentage() + '%' }">
                     {{ vm.getStrongnessPercentage() }}%
                 </div>
             </div>
