--- a/src/app/profile/profile.password-edit.html
+++ b/src/app/profile/profile.password-edit.html
@@ -24,7 +24,10 @@
                 </div>
             </div>
 
-            <div tpa-robustness-bar password="vm.user.password"></div>
+            <div tpa-robustness-bar password="vm.user.password">
+                <img style="max-height: 15px" src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" />
+                Robustness: 
+            </div>
 
             <div class="row text-center actions-bar">
                 <div class="text-center">
