add password matchs

--- a/src/app/form/tpa-error-messages.directive.html
+++ b/src/app/form/tpa-error-messages.directive.html
@@ -5,4 +5,5 @@
     <div class="error" ng-message="number">Please enter a valid number.</div>
     <div class="error" ng-message="minlength">Too short.</div>
     <div class="error" ng-message="date">Date is invalid.</div>
+    <div class="error" ng-message="match">Field does not match.</div>
 </div>
