--- a/src/app/profile/profile.password-edit.html
+++ b/src/app/profile/profile.password-edit.html
@@ -19,8 +19,9 @@
                 <div class="col-md-6">
                     <div class="form-group required">
                         <label class="control-label">Password (confirm)</label>
-                        <input name="passwordConfirmation" class="form-control" type="password" ng-model="vm.user.passwordConfirmation" match="user.password">
+                        <input name="passwordConfirmation" class="form-control" type="password" ng-model="vm.user.passwordConfirmation" match="vm.user.password">
                     </div>
+                    <div tpa-error-messages form="passwordForm" attribute-name="passwordConfirmation"></div>
                 </div>
             </div>
 
