--- a/src/app/profile/profile.password-edit.html
+++ b/src/app/profile/profile.password-edit.html
@@ -21,7 +21,10 @@
                         <label class="control-label">Password (confirm)</label>
                         <input name="passwordConfirmation" class="form-control" type="password" ng-model="vm.user.passwordConfirmation" match="vm.user.password">
                     </div>
-                    <div tpa-error-messages form="passwordForm" attribute-name="passwordConfirmation"></div>
+                    <div tpa-error-messages form="passwordForm" attribute-name="passwordConfirmation">
+                       <!-- override default message -->
+                        <div class="error" ng-message="match">Password does not match.</div>
+                    </div>
                 </div>
             </div>
 
