--- a/src/app/profile/profile.user-edit.html
+++ b/src/app/profile/profile.user-edit.html
@@ -9,7 +9,11 @@
     <div>
         <a class="link" ui-sref="edit-user({firstName: 'Anne'})">Edit Anne's user profile</a>
     </div>
-
+    
+     <div>
+        <a class="link" ui-sref="view-members">View members</a>
+    </div>
+    
     <div class="page">
         <div class="row">
 
