add custom validator

--- a/src/app/form/tpa-error-messages.directive.html
+++ b/src/app/form/tpa-error-messages.directive.html
@@ -6,4 +6,5 @@
     <div class="error" ng-message="minlength">Too short.</div>
     <div class="error" ng-message="date">Date is invalid.</div>
     <div class="error" ng-message="match">Field does not match.</div>
+    <div class="error" ng-message="salary">Invalid salary.</div>
 </div>
