--- a/src/app/profile/profile.password-edit.html
+++ b/src/app/profile/profile.password-edit.html
@@ -1,8 +1,6 @@
 <div class="container profile-password-edit">
 
-    <div>
-        <a class="link" ui-sref="edit-user">Edit user profile</a>
-    </div>
+    <div tpa-navbar active-menu="'edit-password'"></div>
 
     <div class="page">
 
