--- a/src/app/profile/profile.user-edit.html
+++ b/src/app/profile/profile.user-edit.html
@@ -1,5 +1,7 @@
 <div class="container profile-user-edit">
 
+    <div tpa-navbar active-menu="'edit-user'"></div>
+   
     <div>
         <a class="link" ui-sref="edit-password({firstName: vm.user.firstName})">Edit current user's password</a>
     </div>
@@ -8,10 +10,6 @@
     </div>
     <div>
         <a class="link" ui-sref="edit-user({firstName: 'Anne'})">Edit Anne's user profile</a>
-    </div>
-    
-     <div>
-        <a class="link" ui-sref="view-members">View members</a>
     </div>
     
     <div class="page">
