--- a/src/app/tpa-navbar/tpa-navbar.html
+++ b/src/app/tpa-navbar/tpa-navbar.html
@@ -1,20 +1,20 @@
 <nav class="tpa-navbar navbar navbar-static-top navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
+    <div class="container-fluid">
+        <div class="navbar-header">
 
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
-      <ul class="nav navbar-nav">
-        <li ng-class="{ active: vm.activeMenu === 'edit-user' }"><a ui-sref="edit-user">User {{ vm.activeMenu }} profile</a></li>
-        <li ng-class="{ active: vm.activeMenu === 'edit-password' }"><a ui-sref="edit-password">Change password</a></li>
-        <li ng-class="{ active: vm.activeMenu === 'view-members' }"><a ui-sref="view-members">View members</a></li>
-      </ul>
-      
-      
-      
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
+                <ul class="nav navbar-nav">
+                    <li ng-class="{ active: vm.activeMenu === 'view-members' }"><a ui-sref="view-members">View members</a>
+                    </li>
+                    <li ng-class="{ active: vm.activeMenu === 'edit-user' }"><a ui-sref="edit-user">User {{ vm.activeMenu }} profile</a>
+                    </li>
+                    <li ng-class="{ active: vm.activeMenu === 'edit-password' }"><a ui-sref="edit-password">Change password</a>
+                    </li>
+                </ul>
 
-<!--      <ul class="nav navbar-nav navbar-right text">
+                <!--      <ul class="nav navbar-nav navbar-right text">
         <li>Welcome user 'TODO'.</li>
       </ul>-->
-    </div>
-  </div>
+            </div>
+        </div>
 </nav>
