--- a/src/app/tpa-navbar/tpa-navbar.html
+++ b/src/app/tpa-navbar/tpa-navbar.html
@@ -6,9 +6,9 @@
                 <ul class="nav navbar-nav">
                     <li ng-class="{ active: vm.activeMenu === 'view-members' }"><a ui-sref="view-members">View members</a>
                     </li>
-                    <li ng-class="{ active: vm.activeMenu === 'edit-user' }"><a ui-sref="edit-user">User {{ vm.activeMenu }} profile</a>
+                    <li ng-if="vm.activeMenu === 'edit-user'" ng-class="{ active: vm.activeMenu === 'edit-user' }"><a ui-sref="edit-user">Edit member</a>
                     </li>
-                    <li ng-class="{ active: vm.activeMenu === 'edit-password' }"><a ui-sref="edit-password">Change password</a>
+                    <li ng-if="vm.activeMenu !== 'edit-user'" ng-class="{ active: vm.activeMenu === 'create-user' }"><a ui-sref="edit-user">Create member</a>
                     </li>
                 </ul>
 
