--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -3,7 +3,8 @@
     <div tpa-navbar active-menu="'login'"></div>
 
     <h1>Login</h1>
-    <p>Admin account is <code>admin@admin.com</code> / <code>admin</code>
+        <p>Admin account is <code>admin@admin.com</code> / <code>admin</code>
+        <p>User account is <code>test@test.com</code> / <code>test</code>
     </p>
 
     <div class="col-sm-12">
