--- a/src/app/tpa-navbar/tpa-navbar.html
+++ b/src/app/tpa-navbar/tpa-navbar.html
@@ -11,10 +11,12 @@
                     </li>
                     <li ng-class="{ active: vm.activeMenu === 'login' }"><a ui-sref="login">Login</a>
                     </li>
+                    <li><a ui-sref="logout">Logout</a>
+                    </li>
                 </ul>
 
-                <ul class="nav navbar-nav navbar-right text">
-                    <li>Welcome user {{ vm.user }}.</li>
+                <ul ng-if="vm.user && vm.user.name" class="nav navbar-nav navbar-right text">
+                    <li>Welcome {{ vm.user.name }} (role: {{ vm.user.role }})</li>
                 </ul>
             </div>
         </div>
